fix: adjust alignment of bookmark normal toolbar and edit toolbar

--- a/client/src/module/bookmarks/component/BookmarkEditItem/BookmarkEditItem.scss
+++ b/client/src/module/bookmarks/component/BookmarkEditItem/BookmarkEditItem.scss
@@ -1,5 +1,6 @@
 .bookmark-edit-item {
   padding-top: 8px;
+  margin-bottom: 8px;
   font-size: 16px;
   scroll-margin-top: 36px;
 
@@ -13,7 +14,7 @@
 
   box-sizing: border-box;
   width: calc(100% - 16px);
-  margin: -2px 8px 0 8px;
+  margin: -2px 8px -0 8px;
   font-size: 18px;
 
   :deep(.n-input-wrapper) {
@@ -24,10 +25,11 @@
 .bookmark-edit-toolbar {
   display: flex;
   gap: 8px;
+  align-items: center;
   justify-content: end;
-  height: 32px;
-  margin-top: 2px;
-  margin-right: 16px;
+  height: 40px;
+  padding-right: 16px;
+  margin-top: -2px;
 }
 
 .bookmark-edit-action-icon {
