--- a/client/src/module/bookmarks/component/BookmarkItem/BookmarkItem.scss
+++ b/client/src/module/bookmarks/component/BookmarkItem/BookmarkItem.scss
@@ -94,6 +94,7 @@
   display: grid;
   grid-template-columns: minmax(0, 1fr) auto;
   gap: 8px;
+  align-items: center;
   min-height: 40px;
   padding: 0 16px;
 }
